log/build_2025-07-13_19-16-05/stereo_camera_cpp/stdout_stderr.log
Consolidate compiler generated dependencies of target stereo_camera_cpp_lib
[ 16%] Building CXX object CMakeFiles/stereo_camera_cpp_lib.dir/src/stereo_camera.cpp.o
/userdata/stereo_demo/src/stereo_camera.cpp: In static member function ‘static bool stereo_vision::StereoCamera::test_camera_device(int)’:
/userdata/stereo_demo/src/stereo_camera.cpp:399:37: error: ‘cv::utils::logging’ has not been declared
  399 |         int prev_level = cv::utils::logging::getLogLevel();
      |                                     ^~~~~~~
/userdata/stereo_demo/src/stereo_camera.cpp:400:20: error: ‘cv::utils::logging’ has not been declared
  400 |         cv::utils::logging::setLogLevel(cv::utils::logging::LOG_LEVEL_ERROR);
      |                    ^~~~~~~
/userdata/stereo_demo/src/stereo_camera.cpp:400:52: error: ‘cv::utils::logging’ has not been declared
  400 |         cv::utils::logging::setLogLevel(cv::utils::logging::LOG_LEVEL_ERROR);
      |                                                    ^~~~~~~
/userdata/stereo_demo/src/stereo_camera.cpp:409:20: error: ‘cv::utils::logging’ has not been declared
  409 |         cv::utils::logging::setLogLevel(prev_level);
      |                    ^~~~~~~
gmake[2]: *** [CMakeFiles/stereo_camera_cpp_lib.dir/build.make:76: CMakeFiles/stereo_camera_cpp_lib.dir/src/stereo_camera.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:141: CMakeFiles/stereo_camera_cpp_lib.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
